--- a/main.html
+++ b/main.html
@@ -1,16 +1,63 @@
-<!DOCTYPE html>
-
-<html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Assingment 7 Problem 3</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+	<link>
 </head>
+  <body>
+	<form class="m-2 border">
+		<h1 class="text-center m-4">Internship Form</h1>
+		<div class="row1 d-flex"> 
+			<div class=" w-100 m-2">
+				<label for="firstname" class="form-label">First Name</label>
+				<input type="text" class="form-control" id="firstname" aria-describedby="emailHelp">
+				<div id="alert-text" style="color: red;">First name required!</div>
+			  </div>
+			<div class=" w-100 m-2">
+			  <label for="lastname" class="form-label">Last Name</label>
+			  <input type="text" class="form-control" id="lastname" aria-describedby="emailHelp">
+			  <div id="alert-text" style="color: red;">Last name required!</div> 
+			</div>
+			<div class=" w-100 m-2">
+				<label for="exampleInputEmail1" class="form-label">Email Address</label>
+				<input type="email" class="form-control" placeholder="xyz@abc.com" id="exampleInputEmail1" aria-describedby="emailHelp">
+				<div id="alert-text" style="color: red;">Email required!</div>
+			  </div>
+		</div>
+		<div class="row2 d-flex">
+			<div class="w-100 m-2">
+				<label for="college" class="form-label">College</label>
+				<input type="text" class="form-control" id="college">
+				<div id="alert-text" style="color: red;">Please provide a valid college.</div>
+			</div>
+			<div class="w-50 m-2">
+				<label for="graduationYear">Graduation Year</label>
+					<select class="form-select mt-2" aria-label="Default select example">	
+					<option selected>Choose...</option>
+					<option value="1">2020</option>
+					<option value="2">2021</option>
+					<option value="3">2022</option>
+					<option value="4">2023</option>
+				  </select>
+				  <div id="alert-text" style="color: red;">Please select a valid Gradutaion Year.</div>
+			</div>
+			<div class="w-50 m-2">
+					<label for="rollno" class="form-label">Roll No.</label>
+					<input type="number" class="form-control" id="rollno" aria-describedby="emailHelp">
+					<div id="alert-text" style="color: red;">Please provide a valid Roll no.</div>
+			</div>
+		</div>
 
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
+		<div class="mb-3 form-check m-2">
+		  <input type="checkbox" class="form-check-input" id="exampleCheck1">
+		  <label class="form-check-label" for="exampleCheck1">Agree to terms and conditions</label>
+		  <div id="alert-text" style="color: red;">You must agree before submitting.</div>
+		</div>
+		<button type="submit" class="btn btn-primary m-2">Submit Form</button>
+	  </form>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  </body>
 </html>
