--- a/main.html
+++ b/main.html
@@ -12,13 +12,13 @@
 		<h1 class="text-center m-4">Internship Form</h1>
 		<div class="row1 d-flex"> 
 			<div class=" w-100 m-2">
-				<label for="firstname" class="form-label">First Name</label>
-				<input type="text" class="form-control" id="firstname" aria-describedby="emailHelp">
+				<label for="first-name-input" class="form-label">First Name</label>
+				<input type="text" class="form-control" id="#first-name-input" aria-describedby="emailHelp">
 				<div id="alert-text" style="color: red;">First name required!</div>
 			  </div>
 			<div class=" w-100 m-2">
-			  <label for="lastname" class="form-label">Last Name</label>
-			  <input type="text" class="form-control" id="lastname" aria-describedby="emailHelp">
+			  <label for="last-name-input" class="form-label">Last Name</label>
+			  <input type="text" class="form-control" id="#last-name-input" aria-describedby="emailHelp">
 			  <div id="alert-text" style="color: red;">Last name required!</div> 
 			</div>
 			<div class=" w-100 m-2">
@@ -35,7 +35,7 @@
 			</div>
 			<div class="w-50 m-2">
 				<label for="graduationYear">Graduation Year</label>
-					<select class="form-select mt-2" aria-label="Default select example">	
+					<select class="form-select mt-2" id="graduationYear" name="graduationYear">	
 					<option selected>Choose...</option>
 					<option value="1">2020</option>
 					<option value="2">2021</option>
