--- a/main.html
+++ b/main.html
@@ -34,8 +34,8 @@
 				<div id="alert-text" style="color: red;">Please provide a valid college.</div>
 			</div>
 			<div class="w-50 m-2">
-				<label for="graduationYear">Graduation Year</label>
-					<select class="form-select mt-2" id="graduationYear" name="graduationYear">	
+				<label for="grad-year-select">Graduation Year</label>
+					<select class="form-select mt-2" id="grad-year-select" name="graduationYear">	
 					<option selected>Choose...</option>
 					<option value="1">2020</option>
 					<option value="2">2021</option>
