--- a/main.html
+++ b/main.html
@@ -13,12 +13,12 @@
 		<div class="row1 d-flex"> 
 			<div class=" w-100 m-2">
 				<label for="first-name-input" class="form-label">First Name</label>
-				<input type="text" class="form-control" id="#first-name-input" aria-describedby="emailHelp">
+				<input type="text" class="form-control" id="first-name-input" aria-describedby="emailHelp">
 				<div id="alert-text" style="color: red;">First name required!</div>
 			  </div>
 			<div class=" w-100 m-2">
 			  <label for="last-name-input" class="form-label">Last Name</label>
-			  <input type="text" class="form-control" id="#last-name-input" aria-describedby="emailHelp">
+			  <input type="text" class="form-control" id="last-name-input" aria-describedby="emailHelp">
 			  <div id="alert-text" style="color: red;">Last name required!</div> 
 			</div>
 			<div class=" w-100 m-2">
