--- a/main.html
+++ b/main.html
@@ -19,18 +19,18 @@
 			<div class=" w-100 m-2">
 			  <label for="last-name-input" class="form-label">Last Name</label>
 			  <input type="text" class="form-control" id="last-name-input" required>
-			  <div id="alert-text" style="color: red;">Last name required!</div> 
+			  <div id="alert-text" class="invalid-feedback" style="color: red;">Last name required!</div> 
 			</div>
 			<div class=" w-100 m-2">
 				<label for="email-input" class="form-label">Email Address</label>
 				<input type="email" class="form-control" placeholder="xyz@abc.com" id="email-input" required>
-				<div id="alert-text" style="color: red;">Email required!</div>
+				<div id="alert-text" class="invalid-feedback" style="color: red;">Email required!</div>
 			  </div>
 		</div>
 		<div class="row2 d-flex">
 			<div class="w-100 m-2">
-				<label for="college" class="form-label">College</label>
-				<input type="text" class="form-control" id="college" required>
+				<label for="college-input" class="form-label">College</label>
+				<input type="text" class="form-control" id="college-input" required>
 				<div id="alert-text" style="color: red;">Please provide a valid college.</div>
 			</div>
 			<div class="w-50 m-2">
