--- a/main.html
+++ b/main.html
@@ -34,7 +34,7 @@
 				<div id="alert-text" class="invalid-feedback" style="color: red;">Please provide a valid college.</div>
 			</div>
 			<div class="w-50 m-2">
-				<label for="grad-year-select">Graduation Year</label>
+				<label class="form-label" for="grad-year-select">Graduation Year</label>
 					<select class="form-select mt-2" id="grad-year-select" name="graduationYear" required>	
 					<option selected>Choose...</option>
 					<option value="1">2020</option>
